--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 
-# NEXT_PUBLIC_API_URL="https://next-event-server-go.vercel.app/api/v1"
 NEXT_PUBLIC_API_URL="https://portfolio-backend-lac-chi.vercel.app/api"
- NODE_ENV=production
-
+ NODE_ENV=development
 MY_REVALIDATE_SECRET="sumon220020"
 
 # GITHUB_CLIENT_ID="Iv23libDHpQFjiLKQ4RW"
