added loading spinner

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 
 NEXT_PUBLIC_API_URL="https://portfolio-backend-lac-chi.vercel.app/api"
- NODE_ENV=development
+ NODE_ENV=production
+
 MY_REVALIDATE_SECRET="sumon220020"
 
 # GITHUB_CLIENT_ID="Iv23libDHpQFjiLKQ4RW"
